--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,6 +108,14 @@ body {
     margin: 0 .4rem 0 1rem;
 }
 
+select {
+    display: block;
+    margin: .3rem 0 .75rem .5rem;
+    min-width: 10rem;
+    padding: 3px;
+    border-radius: 5px;
+    border: 0;
+}
 /*================ Buttons ===============*/
 
 .btn-row {
