--- a/src/app/pages/product-view/product-view.component.html
+++ b/src/app/pages/product-view/product-view.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="product-options" *ngIf="user == null">
                 <a href="/register">
-                    <button mat-button class="btn-main" *ngIf="user == null">Comprar</button>
+                    <button mat-button class="btn-main" *ngIf="user == null">Registrarse</button>
                 </a>
             </div>
         </div>
