--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -5,3 +5,29 @@
     grid-template-columns: repeat(auto-fill, 250px);
     justify-content: center;
 }
+
+.initial-page-register{
+    padding: 2rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.btn-group{
+    button{
+        font-size: large;
+        border-radius: 10px;
+        padding: 1.5rem;
+    }
+}
+
+hr {
+    margin: 2rem 0 3rem 0;
+    width: 90%;
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(145, 145, 145, 0.75), rgba(0, 0, 0, 0));
+}
