--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -11,7 +11,9 @@
         <p>Ciudad: {{user.city}} </p>
         <p>Dirección: {{user.direction}} </p>
         <p>Suscripcion: {{user.subscription}} </p>
-        <button mat-button class="btn-secondary">Actualiza tu plan</button>
+        <a href="/upgrade">
+            <button mat-button class="btn-secondary">Cambiar plan</button>
+        </a>
         <p>Colección: </p>
         <button mat-button class="btn-main">Ver mi colección</button>
     </mat-card-content>
