--- a/src/app/sub-components/side-menu/side-menu.component.html
+++ b/src/app/sub-components/side-menu/side-menu.component.html
@@ -1,10 +1,10 @@
 <div class="side-menu">
     <ul class="side-menu-nav">
         <li class="nav-item">
-            <a *ngIf="!auth.isLoggedIn()" href="/login" class="side-menu-link">
+            <a *ngIf="isLogged" href="/login" class="side-menu-link">
                 <span class="nav-icon" [inlineSVG]="'assets/svg/login.svg'"></span>
             </a>
-            <a *ngIf="auth.isLoggedIn()" href="/profile" class="side-menu-link">
+            <a *ngIf="isLogged" href="/profile" class="side-menu-link">
                 <span class="nav-icon" [inlineSVG]="'assets/svg/user.svg'"></span>
             </a>
         </li>
