--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -8,10 +8,10 @@
     </div>
     <hr>
     <div class="btn-group">
-        <a href="/login">
+        <a routerLink="/login">
             <button mat-button class="btn-main">Inicia sesión</button>
         </a>
-        <a href="/register">
+        <a routerLink="/register">
             <button mat-button class="btn-secondary">Registrate</button>
         </a>
     </div>
