Made some accesibility changes

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,4 +1,4 @@
-<h1>Explora y busca lo que más te guste :</h1>
+<h1 aria-label="Explora y busca lo que mas te guste">Explora y busca lo que más te guste :</h1>
 <div class="container">
     <app-product-card *ngFor="let prod of products" [product]="prod"></app-product-card>
 </div>
