--- a/src/app/sub-components/product-card/product-card.component.html
+++ b/src/app/sub-components/product-card/product-card.component.html
@@ -2,7 +2,8 @@
     <img 
     height="120" 
     width="205"
-    src="{{video.image.medium.url}}"/>
+    src="{{video.image.medium.url}}"
+    aria-label="Thumbnail"/>
     <p class="prod-title">
         {{product.title}}
     </p>
@@ -18,7 +19,8 @@
     <img 
     height="120" 
     width="205"
-    src="{{song.image.medium.url}}"/>
+    src="{{song.image.medium.url}}"
+    aria-label="Thumbnail"/>
     <p class="prod-title">
         {{song.title}}
     </p>
