--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-side-menu></app-side-menu>
-<router-outlet></router-outlet>
+<main>
+    <app-side-menu></app-side-menu>
+    <router-outlet></router-outlet>
+</main>
