--- a/src/app/sub-components/side-menu/side-menu.component.html
+++ b/src/app/sub-components/side-menu/side-menu.component.html
@@ -1,16 +1,18 @@
 <div class="side-menu">
     <ul class="side-menu-nav">
         <li class="nav-item">
-            <a *ngIf="!isLogged" routerLink="/login" class="side-menu-link">
+            <a *ngIf="!isLogged" routerLink="/login" class="side-menu-link" aria-label="Ingresar">
                 <span class="nav-icon" [inlineSVG]="loginIcon"></span>
             </a>
-            <a *ngIf="isLogged" routerLink="/profile" class="side-menu-link">
+            <a *ngIf="isLogged" routerLink="/profile" class="side-menu-link" aria-label="Perfil">
                 <span class="nav-icon" [inlineSVG]="loggedIcon"></span>
             </a>
         </li>
-        <hr/>
+    </ul>
+    <hr/>
+    <ul class="side-menu-nav">
         <li class="nav-item" *ngFor="let elem of navElements">
-            <a routerLink="{{elem.path}}" class="side-menu-link">
+            <a [attr.aria-label]="elem.text" routerLink="{{elem.path}}" class="side-menu-link" >
                 <span class="nav-icon" [inlineSVG]="elem.icon"></span>
                 <!-- En realidad quiero que el texto se muestre onHover -->
                 <!-- aquí el cómo se hace: https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip -->
