--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -20,7 +20,7 @@
                 </p>
             </mat-grid-tile>
             <mat-grid-tile>
-                <a routerLink='register'>
+                <a routerLink='/register'>
                     <button type="button" mat-button class="btn-secondary">Registrarse</button>
                 </a>
             </mat-grid-tile>
